--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tenacity Records - Independent Record Label</title>
-  <link rel="stylesheet" href="/src/styles.css">
+  <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -281,6 +281,129 @@
     </div>
   </footer>
 
-  <script src="/src/main.ts" type="module"></script>
+  <script>
+// Create floating particles
+function createParticles() {
+  const container = document.getElementById('particles');
+  if (!container) return;
+
+  const particleCount = 50;
+
+  for (let i = 0; i < particleCount; i++) {
+    const particle = document.createElement('div');
+    particle.className = 'particle';
+
+    const size = Math.random() * 6 + 2;
+    particle.style.width = size + 'px';
+    particle.style.height = size + 'px';
+    particle.style.left = Math.random() * 100 + '%';
+    particle.style.top = Math.random() * 100 + '%';
+    particle.style.animationDelay = Math.random() * 20 + 's';
+    particle.style.animationDuration = (15 + Math.random() * 15) + 's';
+
+    container.appendChild(particle);
+  }
+}
+
+// FAQ Accordion
+function initFAQ() {
+  const faqItems = document.querySelectorAll('.faq-item');
+
+  faqItems.forEach(function(item) {
+    const question = item.querySelector('.faq-question');
+    if (question) {
+      question.addEventListener('click', function() {
+        // Close all other items
+        faqItems.forEach(function(otherItem) {
+          if (otherItem !== item) {
+            otherItem.classList.remove('active');
+          }
+        });
+
+        // Toggle current item
+        item.classList.toggle('active');
+      });
+    }
+  });
+}
+
+// Mobile menu toggle
+function initMobileMenu() {
+  const menuBtn = document.getElementById('mobileMenuBtn');
+  const mobileMenu = document.getElementById('mobileMenu');
+
+  if (menuBtn && mobileMenu) {
+    menuBtn.addEventListener('click', function() {
+      mobileMenu.classList.toggle('active');
+    });
+
+    const menuLinks = mobileMenu.querySelectorAll('a');
+    menuLinks.forEach(function(link) {
+      link.addEventListener('click', function() {
+        mobileMenu.classList.remove('active');
+      });
+    });
+  }
+}
+
+// Section dots navigation
+function initSectionDots() {
+  const dots = document.querySelectorAll('.section-dots .dot');
+  const sections = document.querySelectorAll('section');
+
+  function updateActiveDot() {
+    let currentSection = '';
+
+    sections.forEach(function(section) {
+      const sectionTop = section.offsetTop;
+      const sectionHeight = section.clientHeight;
+
+      if (window.scrollY >= sectionTop - sectionHeight / 3) {
+        currentSection = section.getAttribute('id') || '';
+      }
+    });
+
+    dots.forEach(function(dot) {
+      dot.classList.remove('active');
+      if (dot.getAttribute('data-section') === currentSection) {
+        dot.classList.add('active');
+      }
+    });
+  }
+
+  window.addEventListener('scroll', updateActiveDot);
+  updateActiveDot();
+}
+
+// Smooth scroll for navigation links
+function initSmoothScroll() {
+  const navLinks = document.querySelectorAll('a[href^="#"]');
+
+  navLinks.forEach(function(link) {
+    link.addEventListener('click', function(e) {
+      const href = link.getAttribute('href');
+      if (href && href.length > 1) {
+        const target = document.querySelector(href);
+        if (target) {
+          e.preventDefault();
+          target.scrollIntoView({
+            behavior: 'smooth',
+            block: 'start'
+          });
+        }
+      }
+    });
+  });
+}
+
+// Initialize everything when DOM is loaded
+document.addEventListener('DOMContentLoaded', function() {
+  createParticles();
+  initFAQ();
+  initMobileMenu();
+  initSectionDots();
+  initSmoothScroll();
+});
+</script>
 </body>
 </html>
